CDOC2-137: signed SD-JWT, signing certificate and signature params returned from status endpoint after successful SID authenticate session completion. Unsuccessful SID authenticate completion also sets authentication process status to FAILED.
